@@ -38,6 +38,7 @@ lib_dir_suffix     = @lib_dir_suffix@
 OPT_ENABLE_UCSIM = @OPT_ENABLE_UCSIM@
 OPT_ENABLE_DEVICE_LIB_BUILD = @OPT_ENABLE_DEVICE_LIB_BUILD@
 OPT_ENABLE_PACKIHX = @OPT_ENABLE_PACKIHX@
+OPT_ENABLE_LIBRARIAN = @OPT_ENABLE_LIBRARIAN@
 
 SLIB			= $(PRJDIR)/support/Util
 
